<package>
  <name>brics_actuator</name>
  <version>0.4.5</version> <!--TODO-->
  <description brief="Care-O-bot stack with common packages"> <!--TODO-->
  
       The cob_common stack hosts common packages that are used within the Care-O-bot repository. E.g. utility packages or common message and service definitions etc. Also the urdf desciption of the robot is located in this stack.
   
  </description>
  
  <author>Florian Weisshardt</author>
  <maintainer>Florian Weisshardt</maintainer>

  <license>BSD</license>
  <license>LGPL</license>

  <url type="website">http://ros.org/wiki/cob_common</url>

  <build_depend>catkin</build_depend>
  <build_depend>genmsg</build_depend>
  <build_depend>common_msgs</build_depend> <!-- trajectory_msgs, geometry_msgs -->
  <build_depend>ros</build_depend> <!-- roslib -->
  <build_depend>ros_comm</build_depend> <!-- rostest, std_msgs -->

  <run_depend>common_msgs</run_depend> <!-- trajectory_msgs, geometry_msgs -->
  <run_depend>ros</run_depend> <!-- roslib -->
  <run_depend>ros_comm</run_depend> <!-- rostest, std_msgs -->

</package>
