<package>
  <name>brics_actuator</name>
  <version>0.4.5</version> <!--TODO-->
  <description brief="brics_actuator">

     brics_actuator

  </description>

  <author>Alexander Bubeck</author>
  <author>Florian Weisshardt</author>
  <maintainer>Florian Weisshardt</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/brics_actuator</url>

  <build_depend>catkin</build_depend>
  <build_depend>genmsg</build_depend>
  <build_depend>common_msgs</build_depend> <!-- trajectory_msgs, geometry_msgs -->
  <build_depend>ros</build_depend> <!-- roslib -->
  <build_depend>ros_comm</build_depend> <!-- rostest, std_msgs -->

  <run_depend>common_msgs</run_depend> <!-- trajectory_msgs, geometry_msgs -->
  <run_depend>ros</run_depend> <!-- roslib -->
  <run_depend>ros_comm</run_depend> <!-- rostest, std_msgs -->

</package>
