<package>
  <name>cob_common</name>
  <version>0.4.5</version>
  <description brief="Care-O-bot stack with common packages">
  
       The cob_common stack hosts common packages that are used within the Care-O-bot repository. E.g. utility packages or common message and service definitions etc. Also the urdf desciption of the robot is located in this stack.
   
  </description>
  
  <author>Florian Weisshardt</author>
  <maintainer>Florian Weisshardt</maintainer>

  <license>BSD</license>
  <license>LGPL</license>

  <url type="website">http://ros.org/wiki/cob_common</url>

  <build_depend>catkin</build_depend>
  <build_depend>genmsg</build_depend>
  <build_depend>common_msgs</build_depend> <!-- trajectory_msgs, geometry_msgs -->
  <build_depend>robot_model</build_depend> <!-- convex_decomposition, ivcon, urdf -->
  <build_depend>ros</build_depend> <!-- roslib -->
  <build_depend>ros_comm</build_depend> <!-- rostest, std_msgs -->

  <build_depend>brics_actuator</run_depend>
  <build_depend>cob_description</run_depend>
  <!--build_depend>cob_goco</run_depend-->
  <build_depend>cob_srvs</run_depend>
  <!--build_depend>desire_description</run_depend-->
  <!--build_depend>raw_description</run_depend-->

  <run_depend>brics_actuator</run_depend>
  <run_depend>cob_description</run_depend>
  <!--run_depend>cob_goco</run_depend-->
  <run_depend>cob_srvs</run_depend>
  <!--run_depend>desire_description</run_depend-->
  <!--run_depend>raw_description</run_depend-->

  <export>
    <metapackage/>
  </export>
</package>
