<package>
  <name>cob_description</name>
  <version>0.4.5</version> <!--TODO-->
  <description brief="cob_description">

  This package contains the description (mechanical, kinematic, visual,
  etc.) of the Care-O-bot robot. The files in this package are parsed and used by
  a variety of other components. Most users will not interact directly
  with this package.

  </description>
  
  <author>Florian Weisshardt</author>
  <maintainer>Florian Weisshardt</maintainer>

  <license>LGPL</license>

  <url type="website">http://ros.org/wiki/cob_description</url>

  <build_depend>catkin</build_depend>
  <build_depend>genmsg</build_depend>
  <build_depend>robot_model</build_depend> <!-- convex_decomposition, ivcon, urdf -->
  <build_depend>ros_comm</build_depend> <!-- rostest, std_msgs -->

  <run_depend>robot_model</run_depend> <!-- convex_decomposition, ivcon, urdf -->
  <run_depend>ros_comm</run_depend> <!-- rostest, std_msgs -->

</package>
