<package>
  <name>cob_srvs</name>
  <version>0.4.5</version> <!--TODO-->
  <description brief="cob_srvs">

     This Package contains Care-O-bot specific service definitions.

  </description> 

  <author>Florian Weisshardt</author>
  <maintainer>Florian Weisshardt</maintainer>

  <license>LGPL</license>

  <url type="website">http://ros.org/wiki/cob_srvs</url>

  <build_depend>catkin</build_depend>
  <build_depend>genmsg</build_depend>
  <build_depend>common_msgs</build_depend> <!-- trajectory_msgs, geometry_msgs -->
  <build_depend>ros_comm</build_depend> <!-- rostest, std_msgs -->

  <run_depend>common_msgs</run_depend> <!-- trajectory_msgs, geometry_msgs -->
  <run_depend>ros_comm</run_depend> <!-- rostest, std_msgs -->

</package>
